--- a/static/tools/toreve/index.html
+++ b/static/tools/toreve/index.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>東リベツール</title>
+
+  <!-- OGP / Twitterカード設定 -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="東リベツール">
+  <meta property="og:description" content="東京リベンジャーズの実践データカウンター。白・青・赤のカウントをワンタップで記録できるツールです。">
+  <meta property="og:url" content="https://kenkentools.com/static/tools/toreve/index.html">
+  <meta property="og:image" content="https://kenkentools.com/static/toreve.jpg">
+  <meta property="og:site_name" content="けんけんスロット分析ツール">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="東リベツール">
+  <meta name="twitter:description" content="東京リベンジャーズの実践データカウンター。白・青・赤のカウントをワンタップで記録できるツールです。">
+  <meta name="twitter:image" content="https://kenkentools.com/static/toreve.jpg">
+
   <style>
     :root{
       --gap: 10px;
@@ -18,14 +32,12 @@
     html, body {height:100%;}
     body{margin:0; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Hiragino Kaku Gothic ProN", "Noto Sans JP", "Yu Gothic", "Meiryo", sans-serif; color:var(--ink); background:#f8fafc}
 
-    /* 1画面に収めるためのレイアウトラッパ */
     .page{height:100dvh; display:grid; grid-template-rows:auto 1fr;}
-
-    .wrap{max-width:1100px; margin:0 auto; padding:12px}
+    .wrap{max-width:1100px; margin:0 auto; padding:10px}
     header{display:flex; align-items:center; justify-content:space-between; gap:var(--gap); flex-wrap:wrap; margin-bottom:8px}
     h1{font-size: clamp(18px, 2.2vw, 22px); margin:0; font-weight:700}
 
-    .toolbar{display:flex; align-items:center; gap:10px; flex-wrap:wrap}
+    .toolbar{display:flex; align-items:center; gap:8px; flex-wrap:wrap}
     .seg{display:flex; border:1px solid var(--ring); border-radius:12px; overflow:hidden; background:#fff}
     .seg button{appearance:none; border:0; background:transparent; padding:8px 12px; font-size:15px; cursor:pointer; min-width:56px}
     .seg button + button{border-left:1px solid var(--ring)}
@@ -34,13 +46,10 @@
     .btn{appearance:none; border:1px solid var(--ring); background:#fff; padding:8px 12px; border-radius:12px; cursor:pointer; font-size:14px}
     .btn:active{transform:translateY(1px)}
 
-    /* デフォはPC想定：3列 */
-    .grid{height:100%; display:grid; grid-template-columns: repeat(3, 1fr); gap:12px}
+    .grid{height:calc(100dvh - 70px); display:grid; grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(3, 1fr); gap:8px}
 
-    /* スマホ：横2 × 縦3 を1画面に収める */
-    @media (max-width: 560px){
-      .wrap{padding:8px}
-      .grid{grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(3, 1fr); gap:8px}
+    @media (min-width: 600px){
+      .grid{grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(2, 1fr); gap:10px}
     }
 
     .card{background:var(--card); border:1px solid var(--ring); border-radius:12px; overflow:hidden; box-shadow:0 1px 0 rgba(0,0,0,.02); display:flex; flex-direction:column; min-height:0}
@@ -48,7 +57,7 @@
     .imgbox img{width:100%; height:100%; object-fit:cover}
 
     .bar{display:grid; grid-template-columns:repeat(3, 1fr);} 
-    .chip{display:flex; align-items:center; justify-content:center; gap:6px; padding:8px 0; cursor:pointer; user-select:none; font-weight:700; font-variant-numeric: tabular-nums; font-size:14px}
+    .chip{display:flex; align-items:center; justify-content:center; gap:6px; padding:8px 0; cursor:pointer; user-select:none; font-weight:700; font-variant-numeric: tabular-nums; font-size:13px}
     .chip.white{background:#fff; border-top:1px solid var(--ring)}
     .chip.blue{background:var(--blue); color:#fff}
     .chip.red{background:var(--red); color:#fff}
