東リベツール修正7

--- a/static/tools/toreve/index.html
+++ b/static/tools/toreve/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <!-- 相対パスを /static/tools/toreve/ 基準にするための base を追加 -->
+  <base href="/static/tools/toreve/">
   <title>東リベツール</title>
 
   <!-- OGP / Twitterカード設定 -->
