--- a/static/tools/toreve/index.html
+++ b/static/tools/toreve/index.html
@@ -88,6 +88,17 @@
     button, .chip{touch-action: manipulation}
   </style>
 </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HXM85ZV043"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HXM85ZV043');
+  </script>
+
+
 <body>
   <div class="page">
     <div class="wrap">
